<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.LoginPage">


    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.vorti.model.VortiViewModel" />


        <variable
            name="loginPage"
            type="com.example.vorti.pages.LoginPage" />
    </data>

    <!-- Make it scrollable-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Enable constrain capabilities-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- The WELCOME BACK text, id=Welcome_back -->
            <TextView
                android:id="@+id/Welcome_back"
                style="@style/Widget.Vorti.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Welcomeback"
                android:textSize="@dimen/header"
                android:textColor="@color/Black_Coral"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- LOGIN TO YOUR ACCOUNT, id=Welcome_add-->
            <TextView
                android:id="@+id/Welcome_add"
                style="@style/Widget.Vorti.TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/loginText"
                android:textSize="@dimen/regularText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Welcome_back" />

            <!-- ENTER EMAIL TEXT FIELD, id=Email_Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email_Username"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/email_username"
                android:layout_marginTop="50dp"
                app:startIconDrawable="@drawable/ic_email_24"

                app:endIconMode="clear_text"

                app:counterEnabled="true"
                app:counterMaxLength="35"

                app:boxCornerRadiusTopStart="@dimen/textRadius"
                app:boxCornerRadiusTopEnd="@dimen/textRadius"
                app:boxCornerRadiusBottomStart="@dimen/textRadius"
                app:boxCornerRadiusBottomEnd="@dimen/textRadius"

                app:layout_constraintTop_toBottomOf="@id/Welcome_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/textfield"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password, id=password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/textgap"
                app:startIconDrawable="@drawable/ic_lock_24"

                app:endIconMode="password_toggle"

                app:counterEnabled="true"
                app:counterMaxLength="30"

                app:boxCornerRadiusTopStart="@dimen/textRadius"
                app:boxCornerRadiusTopEnd="@dimen/textRadius"
                app:boxCornerRadiusBottomStart="@dimen/textRadius"
                app:boxCornerRadiusBottomEnd="@dimen/textRadius"

                app:layout_constraintTop_toBottomOf="@id/Email_Username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    android:textSize="@dimen/textfield"/>



            </com.google.android.material.textfield.TextInputLayout>

            <!-- The button to "REMEMBER ME" id=rememberMe -->
            <RadioGroup
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/password"
                app:layout_constraintTop_toBottomOf="@id/password">


                <RadioButton
                    android:id="@+id/rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/remember_me"
                    android:checked="@{viewModel.remember}"
                    android:onClick="@{() -> viewModel.whenClick()}"
                    android:textSize="13sp" />

            </RadioGroup>

            <!-- The "FORGOT PASSWORD" text id=forgotpassword -->
            <TextView
                android:id="@+id/forgotPassword"
                style="@style/Widget.Vorti.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_password"
                android:fontFamily="@font/montserrat"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"/>

            <!-- The "LOGIN BUTTON" id=Login -->
            <Button
                android:id="@+id/Login"
                style="@style/Widget.Vorti.Button"
                android:onClick="@{() -> loginPage.onLogin()}"
                android:layout_marginTop="325dp"
                android:layout_marginBottom="5dp"
                android:text="@string/login"
                app:cornerRadius="@dimen/cornerRadius"
                app:layout_constraintTop_toBottomOf="@id/rememberMe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- The "DON'T HAVE AN ACCOUNT" button id=no_account -->
            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/smallerText"
                android:layout_marginStart="60dp"
                app:layout_constraintTop_toTopOf="@id/signup"
                app:layout_constraintStart_toStartOf="@id/Login" />

            <!-- The "SIGN UP" button  id=signup-->
            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:onClick="@{() -> loginPage.signup()}"
                android:text="@string/sign_up"
                android:textColor="@color/Black_Coral"
                android:textSize="@dimen/smallerText"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/no_account"
                app:layout_constraintTop_toBottomOf="@id/Login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

