<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.SigninPage">

    <data>
        <import type="android.view.View"/>
        <variable
            name="signinPage"
            type="com.example.vorti.pages.SigninPage" />

        <variable
            name="viewModel"
            type="com.example.vorti.model.VortiViewModel" />
    </data>

    <!-- Make it scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Enable Constrain capabilities -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- The "LET'S GET STARTED" text field, id="getStarted"-->
            <TextView
                android:id="@+id/getStarted"
                style="@style/Widget.Vorti.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/Black_Coral"
                android:textSize="@dimen/header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- The "Create a new account" text, id="create_new" -->
            <TextView
                android:id="@+id/create_new"
                style="@style/Widget.Vorti.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_a_new_account"
                android:textSize="@dimen/regularText"
                app:layout_constraintTop_toBottomOf="@id/getStarted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- The Text Field for your name, id=fullname -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/full_name"
                android:layout_marginTop="50dp"


                app:startIconDrawable="@drawable/ic_person_24"
                app:startIconTint="@color/Black_Coral"

                app:endIconMode="clear_text"
                app:endIconTint="@color/Black_Coral"


                app:boxStrokeColor="@color/Marigold"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/Black_Coral"


                app:counterEnabled="true"
                app:counterMaxLength="20"


                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"

                app:layout_constraintTop_toBottomOf="@id/create_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/textfield"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- The Text Field for your email, id=email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/email_username"
                android:layout_marginTop="@dimen/textgap"


                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"

                app:startIconDrawable="@drawable/ic_email_24"
                app:startIconTint="@color/Black_Coral"
                app:layout_constraintTop_toBottomOf="@id/fullname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/textfield"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- The Text Field for the password, id=password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/textgap"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconTint="@color/Black_Coral"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    android:textSize="@dimen/textfield"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- The Text field to reconfirm password, id=passwordAgain -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordAgain"
                style="@style/Widget.Vorti.TextInputLayout.OutlinedBox"
                android:hint="@string/confirm_password"
                android:layout_marginTop="@dimen/textgap"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconTint="@color/Black_Coral"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    android:textSize="@dimen/textfield"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!-- The "SIGN UP" button id=signup -->
            <Button
                android:id="@+id/signup"
                style="@style/Widget.Vorti.Button"
                android:onClick="@{() -> signinPage.homePage()}"
                android:layout_marginTop="210dp"
                android:text="@string/sign_up"
                android:elevation="8dp"
                app:cornerRadius="@dimen/cornerRadius"
                app:layout_constraintTop_toBottomOf="@id/passwordAgain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- The "DON'T HAVE AN ACCOUNT" button id=no_account -->
            <TextView
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textSize="@dimen/smallerText"
                android:layout_marginStart="90dp"
                app:layout_constraintTop_toTopOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/signup" />

            <!-- The "Login" button  id=login-->
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:onClick="@{() -> signinPage.login()}"
                android:text="@string/login"
                android:textColor="@color/Black_Coral"
                android:textSize="@dimen/smallerText"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/have_account"
                app:layout_constraintTop_toBottomOf="@id/signup" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

